--- a/src/app/modules/characters/components/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/components/characters-list/characters-list.component.html
@@ -1,1 +1,5 @@
-<sl-list-view></sl-list-view>
+<sl-list-view
+    [columns]="columns"
+    [data]="characters"
+    (onPageLoad)="handlePageLoad($event)"
+></sl-list-view>
