--- a/src/app/common/view-components/components/data-table/data-table.component.html
+++ b/src/app/common/view-components/components/data-table/data-table.component.html
@@ -1,38 +1,18 @@
 <table class="table table-bordered table-hover">
   <thead class="thead-light">
   <tr>
-    <th scope="col">Id</th>
-    <th scope="col">Name</th>
-    <th scope="col">Species</th>
-    <th scope="col">Gender</th>
-    <th scope="col">Homeworld</th>
+    <th *ngFor="let column of columns" scope="col">{{column}}</th>
     <th scope="col">Actions</th>
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Luke Skywalker</td>
-    <td>Human</td>
-    <td>Male</td>
-    <td>Tatooine</td>
-    <td>
-      <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
-        <button type="button" class="btn btn-secondary">
-          <i class="fa fa-pencil" aria-hidden="true"></i> Edit
-        </button>
-        <button type="button" class="btn btn-danger">
-          <i class="fa fa-trash-o" aria-hidden="true"></i> Remove
-        </button>
-      </div>
+  <tr *ngFor="let row of rows, let i = index">
+    <td
+        *ngFor="let column of columns"
+        [scope]="i === 0 ? 'row' : null"
+    >
+      {{row[column]}}
     </td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>R2-D2</td>
-    <td>Droid</td>
-    <td>n/a</td>
-    <td>Naboo</td>
     <td>
       <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
         <button type="button" class="btn btn-secondary">
