--- a/src/app/modules/characters/components/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/components/characters-list/characters-list.component.html
@@ -1,5 +1,6 @@
 <sl-list-view
     [columns]="columns"
-    [data]="characters"
-    (onPageLoad)="handlePageLoad($event)"
+    [data]="service.characters$ | async"
+    (pageLoad)="handlePageLoad($event)"
+    (searchTextChange)="handleSearchTextChange($event)"
 ></sl-list-view>
