--- a/src/app/modules/characters/components/characters-list/characters-list.component.html
+++ b/src/app/modules/characters/components/characters-list/characters-list.component.html
@@ -1,6 +1,7 @@
 <sl-list-view
     [columns]="columns"
     [data]="service.characters$ | async"
+    [pagination]="service.pagination$ | async"
     (pageLoad)="handlePageLoad($event)"
     (searchTextChange)="handleSearchTextChange($event)"
 ></sl-list-view>
