--- a/src/app/modules/characters/components/characters-edit/characters-edit.component.html
+++ b/src/app/modules/characters/components/characters-edit/characters-edit.component.html
@@ -1,3 +1,3 @@
-<p>
-  characters-edit works!
-</p>
+<sl-characters-edit-view
+    [species]="service.species$ | async"
+></sl-characters-edit-view>
