--- a/src/app/common/view-components/components/data-table/data-table.component.scss
+++ b/src/app/common/view-components/components/data-table/data-table.component.scss
@@ -1,5 +1,15 @@
 table thead tr th {
   text-transform: capitalize;
+  cursor: pointer;
+
+  &.column-sort__asc:after {
+    content: '▲';
+
+  }
+
+  &.column-sort__desc:after {
+    content: '▼';
+  }
 }
 
 tr td:first-child {
