--- a/src/app/common/view-components/components/list-view/list-view.component.html
+++ b/src/app/common/view-components/components/list-view/list-view.component.html
@@ -3,11 +3,11 @@
 <div class="row">
   <div class="col-sm-6">
     <sl-search
-        (searchTextChange)="handleSearchTextChange($event)"
+        (searchTextChange)="onSearchTextChange($event)"
     ></sl-search>
   </div>
   <div class="col-sm-6 text-sm-right">
-    <a routerLink="/add" routerLinkActive="active" class="btn btn-primary mb-3">Add New</a>
+    <a routerLink="/add" routerLinkActive="active" class="btn btn-primary mb-3">Add Character</a>
   </div>
 </div>
 
@@ -15,11 +15,15 @@
   <sl-data-table
       [rows]="data"
       [columns]="columns"
+      [sortParams]="sortParams"
+      (removeElement)="onRemoveElement($event)"
+      (editElement)="onEditElement($event)"
+      (sort)="onSort($event)"
   ></sl-data-table>
 
   <sl-pagination
       [pagination]="pagination"
-      (pageLoad)="handlePageLoad($event)"
+      (selectPage)="onSelectPage($event)"
   ></sl-pagination>
 </ng-container>
 
